fix navbar spacing

--- a/medium/style.css
+++ b/medium/style.css
@@ -59,6 +59,7 @@ li {
   padding: 10px 20px 18px 0;
   font-size: 18px;
   line-height: 1.4;
+  width: 8%;
 }
 
 .main {
